--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,9 +18,21 @@ jobs:
           # Build documentation on the latest Julia 1.x
           version: '1'
       - name: Install dependencies
-        run: julia --project=docs/ -e 'using Pkg; Pkg.instantiate();
-                                       Pkg.add("DynamicPolynomials");
-                                       Pkg.develop(PackageSpec(path=pwd()))'
+        shell: julia --project=docs/ {0}
+        run: |
+          using Pkg
+          Pkg.add([
+              PackageSpec(name="SemialgebraicSets", rev="master"),
+              PackageSpec(name="MultivariateBases", rev="master"),
+              PackageSpec(name="MultivariatePolynomials", rev="master"),
+              PackageSpec(name="DynamicPolynomials", rev="master"),
+              PackageSpec(name="TypedPolynomials", rev="master"),
+              PackageSpec(name="MultivariateMoments", rev="master"),
+              PackageSpec(name="PolyJuMP", rev="master"),
+              PackageSpec(url="https://github.com/blegat/HomotopyContinuation.jl", rev="solve"),
+              PackageSpec(path=pwd()),
+          ])
+          Pkg.instantiate()
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
