--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -13,6 +13,20 @@ jobs:
         with:
           version: '1'
       - name: Install dependencies
-        run: julia --project=docs -e 'using Pkg; Pkg.instantiate(); Pkg.develop(PackageSpec(path=pwd()))'
+        shell: julia --project=docs/ {0}
+        run: |
+          using Pkg
+          Pkg.add([
+              PackageSpec(name="SemialgebraicSets", rev="master"),
+              PackageSpec(name="MultivariateBases", rev="master"),
+              PackageSpec(name="MultivariatePolynomials", rev="master"),
+              PackageSpec(name="DynamicPolynomials", rev="master"),
+              PackageSpec(name="TypedPolynomials", rev="master"),
+              PackageSpec(name="MultivariateMoments", rev="master"),
+              PackageSpec(name="PolyJuMP", rev="master"),
+              PackageSpec(url="https://github.com/blegat/HomotopyContinuation.jl", rev="solve"),
+              PackageSpec(path=pwd()),
+          ])
+          Pkg.instantiate()
       - name: Run examples
         run: julia --project=docs --color=yes examples/run_examples.jl
