--- a/Project.toml
+++ b/Project.toml
@@ -30,6 +30,6 @@ MultivariatePolynomials = "0.4"
 MutableArithmetics = "1"
 PolyJuMP = "0.6"
 Reexport = "0.2, 1.0"
-SemialgebraicSets = "0.3"
+SemialgebraicSets = "0.3, 0.2"
 SymbolicWedderburn = "0.3"
 julia = "1.6"
