--- a/Project.toml
+++ b/Project.toml
@@ -24,12 +24,12 @@ Combinatorics = "1"
 DataStructures = "0.18"
 JuMP = "1.5"
 MathOptInterface = "1.13"
-MultivariateBases = "0.1.2"
-MultivariateMoments = "0.3"
-MultivariatePolynomials = "0.4"
+MultivariateBases = "0.1.2, 0.2"
+MultivariateMoments = "0.3 - 0.4"
+MultivariatePolynomials = "0.4 - 0.5"
 MutableArithmetics = "1"
-PolyJuMP = "0.6"
-Reexport = "0.2, 1.0"
+PolyJuMP = "0.6 - 0.7"
+Reexport = "0.2, 1"
 SemialgebraicSets = "0.3"
 SymbolicWedderburn = "0.3"
 julia = "1.6"
