--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,6 +24,9 @@ jobs:
           Pkg.add([
               PackageSpec(name="PolyJuMP", rev="master"),
               PackageSpec(url="https://github.com/blegat/HomotopyContinuation.jl", rev="solve"),
+              PackageSpec(url="https://github.com/blegat/PolynomialTestSystems.jl", rev="fix"),
+              PackageSpec(url="https://github.com/blegat/MixedSubdivisions.jl", rev="MP@v0.5"),
+              PackageSpec(url="https://github.com/blegat/ImplicitPlots.jl", rev="mp@v0.5"),
               PackageSpec(path=pwd()),
           ])
           Pkg.instantiate()
