--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           using Pkg
           Pkg.add([
               PackageSpec(name="MultivariateBases", rev="master"),
-              PackageSpec(name="MathOptInterface", rev="master"),
+              PackageSpec(name="MathOptInterface", rev="bl/no_var"),
           ])
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
