--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
           using Pkg
           Pkg.add([
               PackageSpec(name="MathOptInterface", rev="master"),
-              PackageSpec(name="StarAlgebras", rev="bl/eachindex"),
-              PackageSpec(name="SymbolicWedderburn", rev="bl/supp"),
-              PackageSpec(name="MultivariateBases", rev="master"),
+              PackageSpec(name="StarAlgebras", rev="bl/sos"),
+              PackageSpec(name="SymbolicWedderburn", rev="mk/StarAlgebras_0_3"),
+              PackageSpec(name="MultivariateBases", rev="bl/iterate_quotient"),
               PackageSpec(name="SemialgebraicSets", rev="master"),
               PackageSpec(name="MultivariateMoments", rev="master"),
               PackageSpec(name="PolyJuMP", rev="master"),
