--- a/test/Solvers/Project.toml
+++ b/test/Solvers/Project.toml
@@ -1,5 +1,4 @@
 [deps]
-CDCS = "4fe2ecd4-b952-581a-b4b6-a532675a646e"
 COSMO = "1e616198-aa4e-51ec-90a2-23f7fbd31d8d"
 CSDP = "0a46da34-8e4b-519e-b418-48813639ff34"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
@@ -15,8 +14,7 @@ PolyJuMP = "ddf597a6-d67e-5340-b84c-e37d84115374"
 ProxSDP = "65e78d25-6039-50a4-9445-38022e3d2eb3"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
 SDPA = "b9a10b5b-afa4-512f-a053-bb3d8080febc"
-SDPNAL = "f7a9608b-7678-5329-8a05-97541ebc462c"
-SDPT3 = "e33b2407-87ff-50a0-8b27-f0fe7855237d"
-SeDuMi = "a895aaad-f784-5544-9392-bb281339c1b2"
 SemialgebraicSets = "8e049039-38e8-557d-ae3a-bc521ccf6204"
+StarAlgebras = "0c0c59c1-dc5f-42e9-9a8b-b5dc384a6cd1"
 SumOfSquares = "4b9e565b-77fc-50a5-a571-1244f986bda1"
+SymbolicWedderburn = "858aa9a9-4c7c-4c62-b466-2421203962a2"
