--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           using Pkg
           Pkg.add([
+              PackageSpec(url="https://github.com/blegat/HomotopyContinuation.jl", rev="dynamicpolynomials_v0.6"),
               PackageSpec(name="MathOptInterface", rev="bl/set_map_type"),
               PackageSpec(name="StarAlgebras", rev="bl/sos"),
               PackageSpec(name="SymbolicWedderburn", rev="mk/StarAlgebras_0_3"),
