--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -19,9 +19,9 @@ jobs:
           Pkg.add([
               PackageSpec(url="https://github.com/blegat/HomotopyContinuation.jl", rev="dynamicpolynomials_v0.6"),
               PackageSpec(name="MathOptInterface", rev="bl/set_map_type"),
-              PackageSpec(name="StarAlgebras", rev="bl/sos"),
+              PackageSpec(name="StarAlgebras", rev="main"),
               PackageSpec(name="SymbolicWedderburn", rev="mk/StarAlgebras_0_3"),
-              PackageSpec(name="MultivariateBases", rev="bl/sos"),
+              PackageSpec(name="MultivariateBases", rev="master"),
               PackageSpec(name="SemialgebraicSets", rev="master"),
               PackageSpec(name="MultivariateMoments", rev="master"),
               PackageSpec(name="PolyJuMP", rev="master"),
