--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,6 +5,8 @@ CSDP = "0a46da34-8e4b-519e-b418-48813639ff34"
 Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Cyclotomics = "da8f5974-afbb-4dc8-91d8-516d5257c83b"
+DSDP = "2714ae6b-e930-5b4e-9c21-d0bacf577842"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
